--- a/exam.html
+++ b/exam.html
@@ -3,7 +3,7 @@
 <head>
     <title>John Doe's Web Portfolio</title>
 </head>
-<body>
+<body style="background-color:pink;">
     <center>
     <h1>John Doe's Web Portfolio</h1>
     <p><i>Showcasing HTML Skills using Tables</i></p>
@@ -16,13 +16,13 @@
     </center>
     <hr>
 
-    <table border="2">
+    <table border="2" width="100%">
         <tr>
             <td colspan="2" id="about">
                 <h3>About Me</h3>
                 Hello! I'm <b>John Doe</b>, a passionate web developer. I love building semantic, accessible, and responsive websites using core web technologies.
                 <br>I specialize in front-end development, especially HTML, CSS, and JavaScript.
-                <img src="john_doe.jpg" alt="John Doe Photo" width="150" style="float:right; margin-left:10px;">
+                <img src="john_doe.jpg" alt="John Doe Photo" width="150" style="float:right">
             </td>
         </tr>
         <tr>
